[gd_scene load_steps=15 format=3 uid="uid://dpv4fiom1fiq6"]

[ext_resource type="Script" path="res://scenes/Test3D.gd" id="1_mh6ro"]
[ext_resource type="Texture2D" uid="uid://t6s3nu21tv57" path="res://assets/backgrounds/testbg.png" id="2_u304x"]
[ext_resource type="Script" path="res://actors/enemy/enemy-trigger.gd" id="3_v2pje"]
[ext_resource type="PackedScene" uid="uid://dj82b3yeg7qrj" path="res://actors/enemy/SpiceLord.tscn" id="4_fkj3k"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_ode8g"]
panorama = ExtResource("2_u304x")

[sub_resource type="Sky" id="Sky_okpq4"]
sky_material = SubResource("PanoramaSkyMaterial_ode8g")

[sub_resource type="Environment" id="Environment_i2itu"]
background_mode = 2
background_color = Color(0.407843, 0.976471, 0.976471, 1)
sky = SubResource("Sky_okpq4")
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a1wth"]
albedo_color = Color(0.666667, 0.501961, 0.984314, 1)

[sub_resource type="BoxMesh" id="BoxMesh_s4dv1"]
material = SubResource("StandardMaterial3D_a1wth")
size = Vector3(5, 1, 10)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_krxon"]
data = PackedVector3Array(-2.5, 0.5, 5, 2.5, 0.5, 5, -2.5, -0.5, 5, 2.5, 0.5, 5, 2.5, -0.5, 5, -2.5, -0.5, 5, 2.5, 0.5, -5, -2.5, 0.5, -5, 2.5, -0.5, -5, -2.5, 0.5, -5, -2.5, -0.5, -5, 2.5, -0.5, -5, 2.5, 0.5, 5, 2.5, 0.5, -5, 2.5, -0.5, 5, 2.5, 0.5, -5, 2.5, -0.5, -5, 2.5, -0.5, 5, -2.5, 0.5, -5, -2.5, 0.5, 5, -2.5, -0.5, -5, -2.5, 0.5, 5, -2.5, -0.5, 5, -2.5, -0.5, -5, 2.5, 0.5, 5, -2.5, 0.5, 5, 2.5, 0.5, -5, -2.5, 0.5, 5, -2.5, 0.5, -5, 2.5, 0.5, -5, -2.5, -0.5, 5, 2.5, -0.5, 5, -2.5, -0.5, -5, 2.5, -0.5, 5, 2.5, -0.5, -5, -2.5, -0.5, -5)

[sub_resource type="BoxShape3D" id="BoxShape3D_ok2xv"]
size = Vector3(5, 1, 3)

[sub_resource type="Animation" id="Animation_tb6h1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpiceLord:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.89402, -5.46617, -7.14917)]
}

[sub_resource type="Animation" id="Animation_ldp5a"]
resource_name = "triggerSpiceLord"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpiceLord:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.89402, -5.46617, -7.14917), Vector3(-0.894, 3, -7.149)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qcxn5"]
_data = {
"RESET": SubResource("Animation_tb6h1"),
"triggerSpiceLord": SubResource("Animation_ldp5a")
}

[node name="Test3D" type="Node3D"]
script = ExtResource("1_mh6ro")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i2itu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_s4dv1")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_krxon")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.957772, 0.287528, 0, -0.287528, 0.957772, 0, 2.79248, 0)
light_color = Color(0.866667, 0.717647, 0.984314, 1)
shadow_enabled = true

[node name="SpiceTrigger" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00892, -3.48376)
script = ExtResource("3_v2pje")
enemyGroup = "spicelord"
partyPositions = [Vector3(0, 1, -1.092), Vector3(-1, 1, -0.656), Vector3(1, 1, -0.656)]
battleInitMessage = "The SpiceLord Appears!"
canRun = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpiceTrigger"]
shape = SubResource("BoxShape3D_ok2xv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qcxn5")
}

[node name="SpiceLord" parent="." groups=["spicelord"] instance=ExtResource("4_fkj3k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.89402, -5.46617, -7.14917)
displayName = "spicelord"

[connection signal="body_entered" from="SpiceTrigger" to="." method="_on_spice_trigger_body_entered"]
[connection signal="triggerBattle" from="SpiceTrigger" to="." method="_on_spice_trigger_trigger_battle"]
